feat(api): add docker api (currently in integrator module)
