# vlt-core/integrator/src/main/java/com/wladischlau/vlt/core/integrator/rest/dto/RouteDto.java
@@ -26,7 +26,7 @@ public record RouteDto(
         String publishedPorts,
         @Schema(description = "Сети маршрута. Должны быть предварительно созданы",
                 requiredMode = RequiredMode.REQUIRED)
-        List<String> networks,
+        List<DockerNetworkDto> networks,
         @Schema(description = "Конфигурация среды маршрута",
                 requiredMode = RequiredMode.REQUIRED)
         Map<String, Object> env) {
